# models/user.go
@@ -10,4 +10,7 @@ type User struct {
 	Gender   string `json:"gender"`
 	Dob      string `json:"dob"`
 	Role     string `json:"role" gorm:"default:USER"`
+
+	// Quan hệ 1-nhiều: 1 user có nhiều địa chỉ
+	Addresses []Address `json:"addresses" gorm:"foreignKey:UserID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
 }
